# padel-handler

./: .env-sample  README.md  docker-compose.yml  poetry_scripts.py  pyproject.toml
alembic/: env.py
alembic/versions/: 03717db68cec_first_revision.py  31d1bc2dce71_revision5.py  3f8ac902f3fe_revision6.py  8785c1ecf946_revision5.py  8b2ac5feb670_revision4.py  b5843aa46f9f_revision3.py
padel_handler/: main.py
padel_handler/config/: security.py
padel_handler/database/: database.py
padel_handler/database/crud/: availability.py  match.py  user.py
padel_handler/models/: availability.py  match.py  user.py
padel_handler/routers/: auth.py  availability.py  match.py  user.py
padel_handler/schemas/: auth.py  availability.py  user_match.py
padel_handler/utils/: enum.py  secrets_manager.py  utils.py
templates/email/: match_created.html  match_deleted.html
