[tool.poetry]
name = "padel-handler"
version = "0.1.0"
description = ""
authors = ["Valerio Farrotti <valerio.farrotti@adkaora.com>"]
readme = "README.md"
packages = [{include = "padel_handler"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
